# kommon

./: Cargo.toml  README
.github/workflows/: rust.yml
src/: environment.rs  error.rs  gender.rs  lib.rs
src/ffi/: mod.rs  result.rs
